IaC/workspace/vpc.tf
resource "aws_vpc" "audio-curl-bot-vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "audio-curl-bot-vpc"
    project = "audio-curl-bot"
  }
}

resource "aws_subnet" "public_subnets" {
 count             = length(var.public_subnet_cidrs)
 vpc_id            = aws_vpc.audio-curl-bot-vpc.id
 cidr_block        = element(var.public_subnet_cidrs, count.index)
 availability_zone = element(var.azs, count.index)
 
 tags = {
   Name = "Public Subnet ${count.index + 1}"
   project = "audio-curl-bot"
 }
}
 
resource "aws_subnet" "private_subnets" {
 count             = length(var.private_subnet_cidrs)
 vpc_id            = aws_vpc.audio-curl-bot-vpc.id
 cidr_block        = element(var.private_subnet_cidrs, count.index)
 availability_zone = element(var.azs, count.index)
 
 tags = {
   Name = "Private Subnet ${count.index + 1}"
   project = "audio-curl-bot"
 }
}

variable "azs" {
 type        = list(string)
 description = "Availability Zones"
 default     = ["us-east-1a", "us-east-1b", "us-east-1c"]
}

resource "aws_internet_gateway" "gw" {
 vpc_id = aws_vpc.audio-curl-bot-vpc.id
 
 tags = {
   Name = "Project VPC IG"
   project = "audio-curl-bot"
 }
}

resource "aws_route_table" "second_rt" {
 vpc_id = aws_vpc.audio-curl-bot-vpc.id
 
 route {
   cidr_block = "0.0.0.0/0"
   gateway_id = aws_internet_gateway.gw.id
 }
 
 tags = {
   Name = "2nd Route Table"
   project = "audio-curl-bot"
 }
}

resource "aws_route_table_association" "public_subnet_asso" {
 count          = length(var.public_subnet_cidrs)
 subnet_id      = element(aws_subnet.public_subnets[*].id, count.index)
 route_table_id = aws_route_table.second_rt.id
}

resource "aws_eip" "audio-curl-bot-eip" {
  domain = "vpc"
  instance                  = aws_instance.audio-curl-bot-ec2.id
  depends_on                = [aws_internet_gateway.gw]
}
